public class Book : Scripture
{
    // private List<Chapter> _chapters = new List<Chapter>{};

    public Book(List<string> bookCsvLines) : base()
    {
        
    }

    protected override void SetWordsOfGod()
    {
        
    }
}