public class SearchVerse : Search
{
    public SearchVerse(string command, string inquiry) : base()
    {
        SetSearchDepth(4);
    }
}