public class SearchVolume : Search
{
    public SearchVolume(string command, string inquiry) : base()
    {
        SetSearchDepth(1);
    }
}