public class Verse
{
    private string _wholeVerse;
    private List<Word> _wordsOnly = new List<Word>{};
    public Verse()
    {
        
    }
}