public class Volume
{
    private string _name;
    private List<Book> _books = new List<Book>{};
    public Volume()
    {
        
    }
}