@startuml design

    class Program
    {
        -_commands : List<string>
        ClearTerminal()
        GiveIntro()
        DisplayMenu()
        Search()
        GetCommand()
        GetSearchResult()
    }

    class Search
    {
        -_searchDepth : int
        +Search(input : string)
        +GetSearchDepth()
    }

    class SearchVolume
    {
        -_searchDepth : int
        +SearchVolume(input : string)
        -Result(searchDepth : int, input : string)
    }

    class SearchBook
    {
        -_searchDepth : int
        +SearchBook(input : string)
        -Result(searchDepth : int, input : string)
    }

    ' class SearchChapter
    ' {

    ' }

    class SearchVerse
    {
        -_searchDepth : int
        +SearchVerse(input : string)
        -Result(searchDepth : int, input : string)
    }

    class Scriptures
    {
        -_volumes : List<volume>
        +Scriptures(scriptureInfo : string)
        +SetScriptures() : void
        -SetVolume(scriptureInfo : string) : void
        +Search(searchDepth : int, searchInquiry : string) : List<string>
        ' -SearchDepth(searchingFor : string) : int
        -GetResults() : List<string>
    }

    class Volume
    {
        -_volumeNumber : int
        -_books : List<Book>
        +Volume(scriptureInfo : string)
        +SetScriptures(scriptureInfo : string) : void
        -SetVolumeNumber(number : int) : void
        -SetBook(scriptureInfo : string) : void
        ' +Search(searchDepth : int, searchInquiry : string) : List<string>
        +GetResultPositions(searchDepth : int, searchInquiry : string) : List<string>
        -GetResultPosition(searchDepth : int, searchInquiry : string) : string
        -GetVolumeNumber() : int
        -GetResults(positions : string) : List<string>
        -GetResult(position : string) : string

    }

    class Book
    {
        -_bookNumber : int
        -_chapters : List<Chapter>
        +Book(scriptureInfo : string)
        +SetScriptures(scriptureInfo : string) : void
        -SetBookNumber(number : int) : void
        -SetChapter(scriptureInfo : string) : void
        ' +Search(searchDepth : int, searchInquiry : string) : List<string>
        +GetResultPositions(searchDepth : int, searchInquiry : string) : List<string>
        +GetResultPosition(searchDepth : int, searchInquiry : string) : string
        -GetBookNumber() : int
        -GetResults(positions : string) : List<string>
        -GetResult(position : string) : string
    }

    class Chapter
    {
        -_chapterNumber : int
        -_verses : List<Verses>
        +Chapter(scriptureInfo : string)
        +SetScriptures(scriptureInfo : string) : void
        -SetChapterNumber(number : int) : void
        -SetVerse(scriptureInfo : string) : void
        ' +Search(searchDepth : int, searchInquiry : string) : List<string>
        +GetResultPositions(searchDepth : int, searchInquiry : string) : List<string>
        +GetResultPosition(searchDepth : int, searchInquiry : string) : string
        -GetChapterNumber() : int
        -GetResults(positions : string) : List<string>
        -GetResult(position : string) : string

    }

    class Verse
    {
        -_verseNumber : int
        -_wholeVerse : string
        -_words : List<Word>
        +SetScripture(scriptureInfo : string) : void
        -SetVerseNumber(number : int) : void
        -SetWord(word : string) : void
        ' +Search(searchDepth : int, searchInquiry : string) : List<string>
        +GetResultPosition(searchDepth : int, searchInquiry : string) : string
        -PhraseIsPresent(searchInquiry : string) : bool
        -WordIsPresent(searchInquiry : string) : bool
        -GetVerseNumber() : int
        -GetResults(positions : string) : List<string>
        -GetResult(position : string) : string
    }

    class Word
    {
        ' -_alphabet : List<string>
        ' -_letterPosition : List<int>
        -_letters : List<string>
        +Set(word : string) : void
        -SetLetter(letter : string) : void
        +WordMatches(word : string) : bool
        -GetWord() : string
        -GetLetter() : string
    }


    Program <-- SearchVolume
    Program <-- SearchBook
    Program <-- SearchVerse
    SearchVolume <|-- Search
    SearchBook <|-- Search
    SearchVerse <|-- Search
    SearchVolume <-- Scriptures
    SearchBook <-- Scriptures
    SearchVerse <-- Scriptures
    Scriptures o-- Volume
    Volume *-- Book
    Book *-- Chapter
    Chapter *-- Verse
    Verse *-- Word

@enduml